<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:tools="http://schemas.android.com/tools"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <Button
        android:text="@string/clearsearch"
        android:layout_height="wrap_content"
        android:id="@+id/searchCancel"
        android:layout_below="@+id/searchEntry"
        android:layout_alignBottom="@+id/searchButton"
        android:layout_alignParentStart="true"
        android:layout_width="90dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:id="@+id/searchEntry"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:hint="@string/searchbumpf"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"/>

    <Button
        android:text="@string/dosearch"
        android:layout_height="wrap_content"
        android:id="@+id/searchButton"
        android:layout_below="@+id/searchEntry"
        android:layout_alignParentEnd="true"
        android:layout_width="90dp"/>
</RelativeLayout>