<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="match_parent">



    <TextView
        android:text="@string/title"
        android:layout_height="wrap_content"
        android:id="@+id/edit_title"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_width="150dp"
        android:layout_above="@+id/edit_address_input"
        android:layout_alignParentTop="true"/>

    <TextView
        android:layout_width="230dp"
        android:layout_toRightOf="@+id/edit_title"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Large"
        android:id="@+id/edit_title_input"/>

    <TextView
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text="@string/description"
        android:layout_below="@+id/edit_address"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:id="@+id/edit_description"/>

    <EditText
        android:layout_width="230dp"
        android:layout_toRightOf="@+id/edit_address"
        android:layout_below="@+id/edit_title_input"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:id="@+id/edit_address_input"/>



    <EditText
        android:layout_toRightOf="@+id/edit_description"
        android:layout_below="@+id/edit_address_input"
        android:layout_height="300dp"
        android:inputType="textPersonName"
        android:text=""
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:id="@+id/edit_description_input"
        android:layout_width="230dp"/>


    <Button
        android:text="@string/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/edit_cancel"
        android:layout_alignEnd="@+id/edit_description_input"
        android:layout_marginEnd="42dp"
        android:id="@+id/edit_save"/>

    <Button
        android:text="@android:string/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="15dp"
        android:id="@+id/edit_cancel"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginStart="28dp"/>

    <TextView
        android:text="@string/address"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:id="@+id/edit_address"
        android:textAppearance="@android:style/TextAppearance.Material.Medium"
        android:layout_below="@+id/edit_title"
        android:layout_alignParentStart="true"
        android:layout_above="@+id/edit_description_input"/>

    <CheckBox
        android:text="@string/checkdel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:id="@+id/checkDelete"
        android:layout_below="@+id/edit_description_input"
        android:layout_toStartOf="@+id/edit_save"
        android:layout_marginEnd="22dp"/>
</RelativeLayout>